--- a/_posts/2016-09-21-fooling-around-with-word-embeddings.html
+++ b/_posts/2016-09-21-fooling-around-with-word-embeddings.html
@@ -5,7 +5,7 @@ date: 2016-08-21 13:59:59 -0400
 <!DOCTYPE html>
 <html>
 <head><meta charset="utf-8" />
-<title>Word Embeddings</title>
+<title>Fooling Around with Word Embeddings</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
