--- a/_posts/2016-09-21-fooling-around-with-word-embeddings.html
+++ b/_posts/2016-09-21-fooling-around-with-word-embeddings.html
@@ -241,9 +241,9 @@ Zyzzogeton
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Having a list of most English words sitting on your computer is useful!</p>
-<p>Often my mom calls me on Sundays to tell me the weekly National Public Radio Puzzle—almost always a word puzzle—and often I can solve it with a quick script using the <code>words</code> file!</p>
+<p>Often my mom calls me on Sundays to tell me the weekly National Public Radio Puzzle—almost always a word puzzle—and often I can solve it with a quick script using the <code>words</code> file.</p>
 <h2 id="/usr/share/dict/vectors-(should-be-a-thing)">/usr/share/dict/vectors (should be a thing)<a class="anchor-link" href="#/usr/share/dict/vectors-(should-be-a-thing)">&#182;</a></h2><p>It would be even cooler if there was a file that not only let your computer know what words exist, but also what they mean.</p>
-<p>If you download some <strong>word embeddings</strong> then you'll have that magical file!</p>
+<p>If you download some <strong>word embeddings</strong> then you'll have that magical file.</p>
 <p>They're a way of turning words into numerical vectors, which can be useful because computers are often better at numbers than words.</p>
 <p>Two recent popular word embeddings are <strong>word2vec</strong> and <strong>GloVe</strong> (Global Vectors).</p>
 <p>The vectors are determined in completely different ways, but end up behaving very similarly, so for this thing I downloaded some GloVe vectors.</p>
